<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">smartHUDZip</string>
    <string name="track_list_top">"Sketch of Dawn \nMercy Theme"</string>
    <string name="track_list_play">"Come With Me Now, Tanya Maria"</string>
    <string name="track_list_bottom">"Tomorrow \nSelf Portrait "</string>
        
    <string name="chat_name"> "Steve \n  Hansen"</string> 
    <string name="chat_number"> "9787715233"</string>	
    
    
<!--    <string name="chat_name"> "Michael \n  Amaru"</string> -->
<!--    <string name="chat_number"> "7817897980"</string> -->

<!--	<string name="chat_number"> "6172337770"</string>	Scott K-->
    <string name="chat_text"> "Message from.."</string>
    <string name="chat_driving"> "I'm driving at the moment and will get back to you as soon as it's safe" </string>
    <string name="chat_custom_1"> "Custom chat text response 1"</string>
    <string name="chat_custom_2"> "Custom chat text response 2"</string>   
    <string name="chat_response"> "Message from Steve Hansen, How about dinner at 7 at my place"</string>  
    
    <string name="zip_text"> "Zipcar "</string>
    <string name="zip_extend"> "Extend Res" </string>
    <string name="zip_contact"> "Call Zipcar"</string>
    <string name="zip_nav"> "Route Me Back"</string>   
    <string name="zip_response"> "Hi Steve, your reservation is ending soon at 6. Using the best route, it looks like you'll be able to get back by 6 15. The car is available until 7."</string>       
        
    <string name="zip_call"> "Contacting Zipcar Representative, Dialing now"</string>
    <string name="zip_extend_message"> "Extend your Zipcar Contract"</string>
        
    <string name="titlePrefs"> "Preferences"</string>
</resources>