<!-- Music Panel -->  	
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:background="#000000"> 
	<Button android:text=""
		android:background="@android:color/transparent"
		android:id="@+id/Button_up_music"
		android:layout_height="30px"
		android:textSize="10px"
		android:layout_width="fill_parent">
	</Button>	
	
<!-- The layout is linear L-R with buttons, etc in a relative layout -->	
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1">        
	<Button android:text=""
		android:background="@android:color/transparent"
		android:id="@+id/Button_previous_music"
		android:layout_width="30px"
		android:textSize="10px"
		android:layout_height="260px" >
	</Button>
	
<!-- Music Control Buttons -->	
	<RelativeLayout
	android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1">  	
                  	
	<Button android:id="@+id/button_up_music_track" 
		android:layout_width="wrap_content"
		android:background="@drawable/music_button_up"
		android:layout_marginLeft="35dip"
		android:layout_marginTop="0dip"
		android:layout_height="wrap_content">
	</Button> 		
			
	<Button android:id="@+id/button_music_play" 
		android:layout_width="wrap_content"
		android:background="@drawable/music_play_focused"
		android:layout_marginLeft="10dip"
		android:layout_marginTop="61dip"
		android:layout_height="wrap_content">
	</Button> 	
	
		<Button android:id="@+id/button_music_skip" 
		android:layout_width="wrap_content"
		android:background="@drawable/music_button_skip"
		android:layout_marginLeft="10dip"
		android:layout_marginTop="129dip"
		android:layout_height="wrap_content">
	</Button> 	
				
	<Button android:id="@+id/button_down_music_track" 
		android:layout_width="wrap_content"
		android:background="@drawable/music_button_down"
		android:layout_marginLeft="35dip"
		android:layout_marginTop="190dip"
		android:layout_height="wrap_content">
	</Button>     	      	
	
	<TextView 
  		android:id="@+id/textview"
  		android:layout_width="fill_parent"
 		 android:layout_height="fill_parent"
 		 android:layout_marginLeft="140dip"
 		 android:layout_marginTop="0dip"
 		 android:typeface="sans"
 		 android:textStyle="bold"
 		 android:textColor="#00ffff" 
 		 android:textSize="41sp"		
 		 android:text="@string/track_list_top"
 	 />
 	 
 	 <TextView 
  		android:id="@+id/textview"
  		android:layout_width="fill_parent"
 		 android:layout_height="fill_parent"
 		 android:layout_marginLeft="100dip"
 		 android:layout_marginTop="95dip"
 		 android:typeface="sans"
 		 android:textStyle="bold"
 		 android:textColor="#00ff00" 
 		 android:textSize="50sp"		
 		 android:text="@string/track_list_play"
 		 
 		 
 		android:singleLine="true" 
    android:ellipsize="marquee"
    android:marqueeRepeatLimit ="1"
    android:scrollHorizontally="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
 		 
 		 
 	 />
 	 
 	 <TextView 
  		android:id="@+id/textview"
  		android:layout_width="fill_parent"
 		 android:layout_height="fill_parent"
 		 android:layout_marginLeft="140dip"
 		 android:layout_marginTop="160dip"
 		 android:typeface="sans"
 		 android:textStyle="bold"
 		 android:textColor="#00ffff" 
 		 android:textSize="41sp"		
 		 android:text="@string/track_list_bottom"
 	 />
	
	</RelativeLayout>
		    			   
	<Button android:text=""
		android:id="@+id/Button_next_music"
		android:background="@android:color/transparent"
		android:layout_width="30px"
		android:textSize="10px"
		android:layout_height="260px" >
	</Button>		
   </LinearLayout>
       
	<Button android:text=""
		android:id="@+id/Button_down_music"
		android:background="@android:color/transparent"
		android:layout_height="30px"
		android:textSize="10px"
		android:layout_width="fill_parent">
	</Button>
  </LinearLayout>
    	
    	
    		